Bug 435356 - History fails to include some recently used apps
Summary: History fails to include some recently used apps
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) widget (other bugs)
Version First Reported In: 5.21.3
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-04 19:30 UTC by medin
Modified: 2025-12-02 13:09 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
History fails to include some recently used apps (486.28 KB, image/png)
2021-04-04 19:30 UTC, medin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2021-04-04 19:30:27 UTC
Created attachment 137329 [details]
History fails to include some recently used apps

Some apps are never listed in recent history like Writer, Veracrypt, Thunderbird, SimpleScreenRecorder, Qualculate!,... See attached image for more info.

Operating System: Manjaro Linux
KDE Plasma Version: 5.21.3
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2
Kernel Version: 5.4.105-1-MANJARO
OS Type: 64-bit
Graphics Platform: X11
Comment 1 Nate Graham 2021-04-06 00:32:29 UTC
1. How did you launch those apps that aren't appearing in the history?
2. Do they show up in the history after you quit the apps?
3. Do they show up in the history if you quit the apps and then restart plasmashell with `plasmashell --replace`?
Comment 2 medin 2021-04-06 09:56:00 UTC
(In reply to Nate Graham from comment #1)
> 1. How did you launch those apps that aren't appearing in the history?
> 2. Do they show up in the history after you quit the apps?
> 3. Do they show up in the history if you quit the apps and then restart
> plasmashell with `plasmashell --replace`?

1. I launched them from the new launcher (kickoff) favorites
2. No they are not added to history after exiting them
3. Even after running plasmashel --replace they are not added to history

And even after switching to another menu then switching back they don't appear in history.
Comment 3 medin 2021-04-06 10:02:41 UTC
I think I found the culprit, those apps are added to favorites by right click menu "Show In Favorites>On All Activites", and after removing them from favorites (unticking "On All Activites") they appear again in History. Even show "Show In Favorites>On The Current Activity" causes the same problem with History.
Comment 4 medin 2021-04-06 11:06:43 UTC
In fact, this is not specific to only Kickoff but exists in all other apps menus with History option like Kicker and Dashboard menu.
Comment 5 Nate Graham 2021-04-07 15:06:10 UTC
Interesting observations. I don't use activities, so that's probably why I didn't notice it. Moving to kactivitiymanagerd which I think is responsuble for this.
Comment 6 Ivan Čukić 2021-04-07 18:07:24 UTC
This is intentional extra-filtering done by Kicker, moving back to plasmashell and assigning to Eike.

applets/kicker/plugin/recentusagemodel.cpp:105
return (service && (!favoritesModel || !favoritesModel->isFavorite(service->storageId())));
Comment 7 cwo 2025-06-09 18:17:58 UTC
There's specific code in Kicker's backen to exclude favorites from the history. See also the corresponding bug 449834 in Kickoff.

In principle I don't think this would be hard to change, just remove that filter. The question is whether we want to actually do that.

On the one hand, History or Recent Applications seems like it *should* include all applications, whether they're favorites or not. On the other hand, they're mostly pointless there - if an app is in favorites, it's already more easily accessible, as both kicker (regular or dash) and kickoff show favorites immediately when you open them, so showing them in history as well is a bit pointless, and given that people likely use their favorites often, makes fewer recently used non-favorites available in the list. In many circumstances users will end up with a second favorites list that takes more effort to access.

I'm ambivalent about this personally.
Comment 8 Nate Graham 2025-06-09 22:27:42 UTC
In theory the filtering makes sense. However the fact that we have bug reports about indicates that it's perceived as a bug rather than appreciated as a feature, at least by some. It's extra magic that you aren't expecting and have to figure out.

The feature is also somewhat "assuming the presentation", since in principle, the data model could be used by a launcher that doesn't have favorite apps displayed prominently or at all.

I would lean towards removing the filtering.
Comment 9 Bug Janitor Service 2025-06-11 16:25:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5584
Comment 10 cwo 2025-12-02 13:09:27 UTC
Git commit 0b25ddc9ed0a81f2fb9b46c69e5a79b1ab7bee41 by Christoph Wolk.
Committed on 02/12/2025 at 12:03.
Pushed by cwo into branch 'master'.

applets/kicker: show all apps in history

4399573d (in 2015) introduced a filter in the history model to not show
favorites in recently used applications. In principle, this makes sense
(and apparently was requested at the time, though I could not find the
relevant feature requests) - as favorites tend to be often used,
including them makes the recent application history mostly a less easily
accessed copy of the favorites list. But this is opaque to users and
even developers, who often perceive these omissions as a bug, and there
does not seem to be a concise and clear wording that would make the
intentionality of this omission apparent - labeling menus or sections
"Recent Applications excluding Favorites" is terribly awkward.

Instead, be less clever and just do the obvious thing that the labels
History and Recent Applications suggest: show the history of the most
recently launched applications.
Related: bug 449834

M  +1    -5    applets/kicker/recentusagemodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/0b25ddc9ed0a81f2fb9b46c69e5a79b1ab7bee41